--- a/package.json
+++ b/package.json
@@ -10,28 +10,34 @@
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
+    "db:seed": "prisma db seed",
     "postinstall": "prisma generate"
   },
+  "prisma": {
+    "seed": "npx tsx prisma/seed.ts"
+  },
   "dependencies": {
+    "@imagekit/nodejs": "^7.3.0",
+    "@prisma/client": "^6.9.0",
+    "@swc/helpers": "^0.5.0",
+    "bcryptjs": "^2.4.3",
+    "jose": "^5.9.6",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "@prisma/client": "^6.9.0",
-    "@swc/helpers": "^0.5.0",
-    "zod": "^3.24.0",
-    "bcryptjs": "^2.4.3",
-    "jose": "^5.9.6"
+    "zod": "^3.24.0"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "prisma": "^6.9.0",
     "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
+    "prisma": "^6.9.0",
     "tailwindcss": "^4",
+    "tsx": "^4.19.2",
     "typescript": "^5"
   }
 }
