--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
   "dependencies": {
     "@imagekit/nodejs": "^7.3.0",
     "@prisma/client": "^6.9.0",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-visually-hidden": "^1.2.4",
     "@swc/helpers": "^0.5.0",
     "bcryptjs": "^2.4.3",
     "jose": "^5.9.6",
+    "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
