--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "@radix-ui/react-visually-hidden": "^1.2.4",
     "@swc/helpers": "^0.5.0",
     "bcryptjs": "^2.4.3",
+    "clsx": "^2.1.1",
+    "imagekitio-react": "^4.3.0",
     "jose": "^5.9.6",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "tailwind-merge": "^3.4.0",
     "zod": "^3.24.0"
   },
   "devDependencies": {
